k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sakamchisto
  labels:
    app.kubernetes.io/name: sakamchisto
    app.kubernetes.io/part-of: sakamchisto
